--- a/hipodromo/src/app/app.component.html
+++ b/hipodromo/src/app/app.component.html
@@ -1,3 +1,17 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
-</ion-app>
+
+<div style="text-align:center">
+  <h1>
+    Welcome to Compras!
+  </h1>
+  <button (click)="getAllCompras()">getAllCompras()</button>
+  <button (click)="getCompra()">getCompra()</button>
+  <button (click)="createCompra()">createCompra()</button>
+  <button (click)="updateCompra()">updateCompra()</button>
+  <button (click)="deleteCompra()">deleteCompra()</button>
+</div>
+  <!-- <ion-app> -->
+  <!-- <ion-router-outlet> -->
+<!-- </ion-router-outlet>
+  <router-outlet></router-outlet>
+</ion-router-outlet> -->
+<!-- </ion-app> -->
