--- a/hipodromo/src/app/auth/auth.page.scss
+++ b/hipodromo/src/app/auth/auth.page.scss
@@ -19,3 +19,17 @@
      font-size: 30px;
      text-align: center;
 }
+
+.toggle-text {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   ion-text { 
+      font-weight: 500;
+      cursor: pointer;
+      margin-left: 8px;
+      &:hover {
+         text-decoration: underline;
+      }
+   }
+}
